--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",    
+    "lint": "next lint",
+    "heroku-postbuild": "npm run build",
     "export": "npm run build && next export -o _static"
   },
   "dependencies": {
-    "bootstrap": "^5.1.0",
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
     "next": "12.2.2",
+    "popper": "^1.0.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0-beta.1",
     "react-dom": "18.2.0"
